--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -1,1 +1,4 @@
-@import './partials/_listingItem.sass'
+@import './partials/colors.sass'
+@import './partials/body.sass'
+@import './partials/container.sass'
+@import './partials/listing-item.sass'
