Added details modal

--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -2,3 +2,4 @@
 @import './partials/body.sass'
 @import './partials/container.sass'
 @import './partials/listing-item.sass'
+@import './partials/modal.sass'
