--- a/src/styles/partials/_container.sass
+++ b/src/styles/partials/_container.sass
@@ -3,11 +3,23 @@
     max-width: 700px
     margin: auto
     padding: 10px
+    font-family: 'Sunflower', sans-serif
 
     h1
       margin: 20px auto
       font-size: 40px
-      font-family: 'Sunflower', sans-serif
       letter-spacing: 6px
       color: $text
       text-align: center
+
+    #error
+      display: none
+      width: 100%
+      padding: 5px
+      background-color: $white
+      color: red
+      text-align: center
+      border-radius: 4px
+
+      h3
+        margin: 5px
