--- a/src/styles/partials/_container.sass
+++ b/src/styles/partials/_container.sass
@@ -12,6 +12,9 @@
       color: $text
       text-align: center
 
+      @media (max-width: 700px)
+        font-size: 30px
+
     #error
       display: none
       width: 100%
