--- a/src/styles/partials/_body.sass
+++ b/src/styles/partials/_body.sass
@@ -1,5 +1,5 @@
 body
   margin: 0
-  background-image: url('/img/wing1.jpg')
+  background-image: url('img/wing1.jpg')
   background-attachment: fixed
   background-size: cover
